Fix legend visibility

--- a/vis/stylesheets/modules/_map.scss
+++ b/vis/stylesheets/modules/_map.scss
@@ -165,6 +165,7 @@ text {
 
 .explanation-ids {
     font-size: 11px;
+    visibility: hidden;
 }
 
 .explanation-id {
